feat(customizations): 8.2 hibernate path, a Tomcat-side list, a scripts/ overlay warning
Closes #117 (vendor documentation review 5.1 and 5.2, ADR-0034).
WEB-INF/classes/hibernate.properties is installer-written like the
pre-8.2 path; scan --tomcat lists bin/setenv.*, conf/server.xml,
conf/Catalina/localhost/*.xml and the lib jars Tomcat does not ship, as
what to carry over with no comparison; a file under scripts/ earns a note
in the scan and a warning from register, and the operator guide gives the
rebuild-and-copy procedure.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01TFze5R5AvvaHexHo5aoHGr